# attribution

./: Readme.md
01_Input/: 000_WID_preprocessing.py  001_CHANCEL_preprocessing.py  010_WID_data_visualisation.ipynb  011_CHANCEL_data_visualisation.ipynb  Readme.md
01_Input/utils/: Chancel_functions.py  WID_functions.py
02_Emulations/02a_MAGICC/: Makefile  README.md  pyproject.toml
02_Emulations/02a_MAGICC/notebooks/: 010_download-and-clean-rcmip.py  020_attribution-emissions.py  030_inverse-attribution-emissions.py  040_additional_attribution-emissions.py  110_run-magicc.py
02_Emulations/02b_MESMER-M-TP/: Readme.md
03_Analysis/: 001_GMT-Attribution_Results_Processing.py
04_Graphics/: 000_CO2-inequality_data.ipynb  001_GMT_graphics-data.ipynb  011_GMT-WID.ipynb  014_tail-risks.ipynb  101_Paper_Graphics_Appendix.ipynb  101_Paper_Graphics_Main.ipynb
05_Other/: 000_publication_files.ipynb
Analysis/: 002_GMT-Attribution_Visualisation.ipynb  011_defining_historic_extremes.py  013_frequency_change.py  014_intensity_change.py
Graphics/: 001_GMT_graphics-data.ipynb  002_Extremes_graphics-data.ipynb  011_GMT-WID.ipynb  012c_Extremes_grid-cell_frequency_revisions.ipynb  012d_Extremes_grid-cell_frequency_revisions_appendix.ipynb  012e_Extremes_grid-cell_intensity_revisions.ipynb  012f_Extremes_grid-cell_intensity_revisions_appendix.ipynb  014_tail-risks.ipynb
Input/: 000_WID_preprocessing.py  001_CHANCEL_preprocessing.py  Readme.md
Other/: 000_publication_files.ipynb
config/: config.py
utils/: plotting_functions.py  processing_functions.py
(+14 files in other folders)
